--- a/src/main/resources/assets/scanner/lang/en_US.lang
+++ b/src/main/resources/assets/scanner/lang/en_US.lang
@@ -3,5 +3,5 @@ tile.biomeScannerBasic.name=Biome Scanner (Basic)
 tile.biomeScannerAdv.name=Biome Scanner (Advanced)
 tile.biomeScannerElite.name=Biome Scanner (Elite)
 tile.biomeScannerUltimate.name=Biome Scanner (Ultimate)
-
+tile.scannerQueue.name=Scanner Queue
 itemGroup.scanner=Scanner
