--- a/src/main/resources/assets/scanner/lang/en_US.lang
+++ b/src/main/resources/assets/scanner/lang/en_US.lang
@@ -1,12 +1,12 @@
-tile.scanner:terrainScanner.name=Terrain Scanner
-tile.scanner:biomeScannerBasic.name=Biome Scanner (Basic)
-tile.scanner:biomeScannerAdv.name=Biome Scanner (Advanced)
-tile.scanner:biomeScannerElite.name=Biome Scanner (Elite)
-tile.scanner:biomeScannerUltimate.name=Biome Scanner (Ultimate)
-tile.scanner:scannerQueue.name=Scanner Queue
-itemGroup.scanner=Scanner
+tile.queue:terrainScanner.name=Terrain Scanner
+tile.queue:biomeScannerBasic.name=Biome Scanner (Basic)
+tile.queue:biomeScannerAdv.name=Biome Scanner (Advanced)
+tile.queue:biomeScannerElite.name=Biome Scanner (Elite)
+tile.queue:biomeScannerUltimate.name=Biome Scanner (Ultimate)
+tile.queue:scannerQueue.name=Scanner Queue
+itemGroup.queue=Scanner
 
-tile.scanner:dimensionalCore_nether.name=Dimensional Core (Nether)
-tile.scanner:dimensionalCore_end.name=Dimensional Core (End)
-tile.scanner:dimensionalCore_overworld.name=Dimensional Core (Overworld)
-tile.scanner:dimensionalCore_none.name=Dimensional Core
+tile.queue:dimensionalCore_nether.name=Dimensional Core (Nether)
+tile.queue:dimensionalCore_end.name=Dimensional Core (End)
+tile.queue:dimensionalCore_overworld.name=Dimensional Core (Overworld)
+tile.queue:dimensionalCore_none.name=Dimensional Core
