--- a/src/main/resources/assets/scanner/lang/en_us.lang
+++ b/src/main/resources/assets/scanner/lang/en_us.lang
@@ -4,4 +4,29 @@ tile.biomeScannerAdv.name=Biome Scanner (Advanced)
 tile.biomeScannerElite.name=Biome Scanner (Elite)
 tile.biomeScannerUltimate.name=Biome Scanner (Ultimate)
 tile.scannerQueue.name=Scanner Queue
+
+gui.showMap=Show map
+gui.charged=Charged
+gui.turnOn=Turn on
+gui.turnOff=Turn off
+gui.enderIOWarningL1=(Warning: May appear broken with
+gui.enderIOWarningL2=EnderIO conduits and capacitor banks)
+gui.current=Current:
+gui.currentBlockOff=Current block: Off
+gui.endBlock=End block:
+gui.remoteStart=Remote start:
+gui.ultimateBSL1=Place ultimate biome scanner
+gui.ultimateBSL2=adjacent to show map
+gui.queueAttached=Scanner Queue attached
+gui.tsAttached=Terrain Scanner attached
+gui.tsNotAttached=Terrain Scanner not attached
+gui.clickToScan=Click to scan!
+gui.powerCost=Power cost:
+gui.alreadyBuilding=Already building!
+gui.insufficientPower=Insufficient power!
+gui.cannotScanChunks=cannot scan chunks more than %d blocks away!
+
+capacity=Capacity
+distanceInChunks=Distance (Chunks)
+speedInBlocksPerTick=Speed (Blocks/t)
 itemGroup.scanner=Scanner
