--- a/src/main/resources/assets/scanner/lang/en_us.lang
+++ b/src/main/resources/assets/scanner/lang/en_us.lang
@@ -24,7 +24,7 @@ gui.clickToScan=Click to scan!
 gui.powerCost=Power cost:
 gui.alreadyBuilding=Already building!
 gui.insufficientPower=Insufficient power!
-gui.cannotScanChunks=cannot scan chunks more than %d blocks away!
+gui.cannotScanChunks=cannot scan chunks more than %d chunks away!
 
 capacity=Capacity
 distanceInChunks=Distance (Chunks)
