--- a/src/main/resources/assets/scanner/lang/zh_cn.lang
+++ b/src/main/resources/assets/scanner/lang/zh_cn.lang
@@ -1,30 +1,30 @@
-tile.terrainScanner.name=µØĞÎÉ¨ÃèÒÇ
-tile.biomeScannerBasic.name=ÉúÎïÈºÏµÉ¨ÃèÒÇ£¨»ù´¡£©
-tile.biomeScannerAdv.name=ÉúÎïÈºÏµÉ¨ÃèÒÇ£¨¸ß¼¶£©
-tile.biomeScannerElite.name=ÉúÎïÈºÏµÉ¨ÃèÒÇ£¨¾«Ó¢£©
-tile.biomeScannerUltimate.name=ÉúÎïÈºÏµÉ¨ÃèÒÇ£¨ÖÕ¼«£©
-itemGroup.scanner=É¨ÃèÆ÷
-tile.scannerQueue.name=É¨Ãè¶ÓÁĞ
-gui.showMap=ÏÔÊ¾µØÍ¼
-gui.charged=³äÄÜ
-gui.turnOn=¿ªÆô
-gui.turnOff=¹Ø±Õ
-gui.enderIOWarningL1=(¾¯¸æ: ¿ÉÄÜ»áÓëEnderIO
-gui.enderIOWarningL2=¹ÜµÀºÍµçÈİ²úÉú¼æÈİÎÊÌâ)
-gui.current=µ±Ç°·½¿é:
-gui.currentBlockOff=µ±Ç°·½¿é: ¹Ø±Õ
-gui.endBlock=ÖÕÖ¹·½¿é:
-gui.remoteStart=Ô¶³ÌÆğµã:
-gui.ultimateBSL1=½«ÖÕ¼«ÉúÎïÈºÏµÉ¨ÃèÒÇ
-gui.ultimateBSL2=ÖÃÓÚÏàÁÚÎ»ÖÃÀ´ÏÔÊ¾µØÍ¼
-gui.queueAttached=É¨Ãè¶ÓÁĞÒÑÁ¬½Ó
-gui.tsAttached=µØĞÎÉ¨ÃèÒÇÒÑÁ¬½Ó
-gui.tsNotAttached=µØĞÎÉ¨ÃèÒÇÎ´Á¬½Ó
-gui.clickToScan=µã»÷¿ªÊ¼É¨Ãè£¡
-gui.powerCost=ÏûºÄÄÜÁ¿:
-gui.alreadyBuilding=ÒÑÔÚ½¨Ôì!
-gui.insufficientPower=ÄÜÁ¿²»×ã!
-gui.cannotScanChunks=ÎŞ·¨É¨Ãè %d ¸öÇø¿éÔ¶ÍâµÄÇø¿é£¡
-capacity=µçÁ¿
-distanceInChunks=Çø¿é¾àÀë
-speedInBlocksPerTick=ËÙ¶È (·½¿é/t)
+tile.terrainScanner.name=åœ°å½¢æ‰«æä»ª
+tile.biomeScannerBasic.name=ç”Ÿç‰©ç¾¤ç³»æ‰«æä»ªï¼ˆåŸºç¡€ï¼‰
+tile.biomeScannerAdv.name=ç”Ÿç‰©ç¾¤ç³»æ‰«æä»ªï¼ˆé«˜çº§ï¼‰
+tile.biomeScannerElite.name=ç”Ÿç‰©ç¾¤ç³»æ‰«æä»ªï¼ˆç²¾è‹±ï¼‰
+tile.biomeScannerUltimate.name=ç”Ÿç‰©ç¾¤ç³»æ‰«æä»ªï¼ˆç»ˆæï¼‰
+itemGroup.scanner=æ‰«æå™¨
+tile.scannerQueue.name=æ‰«æé˜Ÿåˆ—
+gui.showMap=æ˜¾ç¤ºåœ°å›¾
+gui.charged=å……èƒ½
+gui.turnOn=å¼€å¯
+gui.turnOff=å…³é—­
+gui.enderIOWarningL1=(è­¦å‘Š: å¯èƒ½ä¼šä¸EnderIO
+gui.enderIOWarningL2=ç®¡é“å’Œç”µå®¹äº§ç”Ÿå…¼å®¹é—®é¢˜)
+gui.current=å½“å‰æ–¹å—:
+gui.currentBlockOff=å½“å‰æ–¹å—: å…³é—­
+gui.endBlock=ç»ˆæ­¢æ–¹å—:
+gui.remoteStart=è¿œç¨‹èµ·ç‚¹:
+gui.ultimateBSL1=å°†ç»ˆæç”Ÿç‰©ç¾¤ç³»æ‰«æä»ª
+gui.ultimateBSL2=ç½®äºç›¸é‚»ä½ç½®æ¥æ˜¾ç¤ºåœ°å›¾
+gui.queueAttached=æ‰«æé˜Ÿåˆ—å·²è¿æ¥
+gui.tsAttached=åœ°å½¢æ‰«æä»ªå·²è¿æ¥
+gui.tsNotAttached=åœ°å½¢æ‰«æä»ªæœªè¿æ¥
+gui.clickToScan=ç‚¹å‡»å¼€å§‹æ‰«æï¼
+gui.powerCost=æ¶ˆè€—èƒ½é‡:
+gui.alreadyBuilding=å·²åœ¨å»ºé€ !
+gui.insufficientPower=èƒ½é‡ä¸è¶³!
+gui.cannotScanChunks=æ— æ³•æ‰«æ %d ä¸ªåŒºå—è¿œå¤–çš„åŒºå—ï¼
+capacity=ç”µé‡
+distanceInChunks=åŒºå—è·ç¦»
+speedInBlocksPerTick=é€Ÿåº¦ (æ–¹å—/t)
