Fix remote null crash & Fix zh_cn.lang

--- a/src/main/resources/assets/scanner/lang/zh_cn.lang
+++ b/src/main/resources/assets/scanner/lang/zh_cn.lang
@@ -15,16 +15,16 @@ gui.current=当前方块:
 gui.currentBlockOff=当前方块: 关闭
 gui.endBlock=终止方块:
 gui.remoteStart=远程起点:
-gui.ultimateBSL1=将终极生物群系扫描仪
-gui.ultimateBSL2=置于相邻位置来显示地图
-gui.queueAttached=扫描队列已连接
-gui.tsAttached=地形扫描仪已连接
+gui.ultimateBSL1=       将终极生物群系扫描仪
+gui.ultimateBSL2=  置于相邻位置来显示地图
+gui.queueAttached=       扫描队列已连接
+gui.tsAttached=   地形扫描仪已连接
 gui.tsNotAttached=地形扫描仪未连接
 gui.clickToScan=点击开始扫描！
 gui.powerCost=消耗能量:
 gui.alreadyBuilding=已在建造!
 gui.insufficientPower=能量不足!
-gui.cannotScanChunks=无法扫描 %d 个区块远外的区块！
-capacity=电量
+gui.cannotScanChunks=无法扫描 %d 个区块以外的区块！
+capacity=容量
 distanceInChunks=区块距离
 speedInBlocksPerTick=速度 (方块/t)
