Add I18n for buttons

--- a/src/main/resources/assets/scanner/lang/en_us.lang
+++ b/src/main/resources/assets/scanner/lang/en_us.lang
@@ -25,6 +25,9 @@ gui.powerCost=Power cost:
 gui.alreadyBuilding=Already building!
 gui.insufficientPower=Insufficient power!
 gui.cannotScanChunks=cannot scan chunks more than %d chunks away!
+gui.button.add=Add
+gui.button.build=Build
+gui.button.remove=Remove
 
 capacity=Capacity
 distanceInChunks=Distance (Chunks)
