--- a/src/main/resources/assets/scanner/lang/zh_cn.lang
+++ b/src/main/resources/assets/scanner/lang/zh_cn.lang
@@ -25,6 +25,9 @@ gui.powerCost=消耗能量:
 gui.alreadyBuilding=已在建造!
 gui.insufficientPower=能量不足!
 gui.cannotScanChunks=无法扫描 %d 个区块以外的区块！
+gui.button.add=新增
+gui.button.build=建造
+gui.button.remove=移除
 capacity=容量
 distanceInChunks=区块距离
 speedInBlocksPerTick=速度 (方块/t)
