--- a/src/main/resources/assets/scanner/lang/en_us.lang
+++ b/src/main/resources/assets/scanner/lang/en_us.lang
@@ -5,31 +5,34 @@ tile.biomeScannerElite.name=Biome Scanner (Elite)
 tile.biomeScannerUltimate.name=Biome Scanner (Ultimate)
 tile.scannerQueue.name=Scanner Queue
 
-gui.showMap=Show map
-gui.charged=Charged
-gui.turnOn=Turn on
-gui.turnOff=Turn off
-gui.enderIOWarningL1=(Warning: May appear broken with
-gui.enderIOWarningL2=EnderIO conduits and capacitor banks)
-gui.current=Current:
-gui.currentBlockOff=Current block: Off
-gui.endBlock=End block:
-gui.remoteStart=Remote start:
-gui.ultimateBSL1=Place ultimate biome scanner
-gui.ultimateBSL2=adjacent to show map
-gui.queueAttached=Scanner Queue attached
-gui.tsAttached=Terrain Scanner attached
-gui.tsNotAttached=Terrain Scanner not attached
-gui.clickToScan=Click to scan!
-gui.powerCost=Power cost:
-gui.alreadyBuilding=Already building!
-gui.insufficientPower=Insufficient power!
-gui.cannotScanChunks=cannot scan chunks more than %d chunks away!
-gui.button.add=Add
-gui.button.build=Build
-gui.button.remove=Remove
+gui.scanner.showMap=Show map
+gui.scanner.charged=Charged
+gui.scanner.turnOn=Turn on
+gui.scanner.turnOff=Turn off
+gui.scanner.enderIOWarningL1=(Warning: May appear broken with
+gui.scanner.enderIOWarningL2=EnderIO conduits and capacitor banks)
+gui.scanner.current=Current:
+gui.scanner.currentBlockOff=Current block: Off
+gui.scanner.endBlock=End block:
+gui.scanner.remoteStart=Remote start:
+gui.scanner.ultimateBSL1=Place ultimate biome scanner
+gui.scanner.ultimateBSL2=adjacent to show map
+gui.scanner.queueAttached=Scanner Queue attached
+gui.scanner.tsAttached=Terrain Scanner attached
+gui.scanner.tsNotAttached=Terrain Scanner not attached
+gui.scanner.clickToScan=Click to scan!
+gui.scanner.powerCost=Power cost:
+gui.scanner.alreadyBuilding=Already building!
+gui.scanner.insufficientPower=Insufficient power!
+gui.scanner.cannotScanChunks=cannot scan chunks more than %d chunks away!
+gui.scanner.button.add=Add
+gui.scanner.button.build=Build
+gui.scanner.button.remove=Remove
+gui.scanner.capacity=Capacity
+gui.scanner.distanceInChunks=Distance (Chunks)
+gui.scanner.speedInBlocksPerTick=Speed (Blocks/t)
 
-capacity=Capacity
-distanceInChunks=Distance (Chunks)
-speedInBlocksPerTick=Speed (Blocks/t)
 itemGroup.scanner=Scanner
+
+waila.scanner.energy=Energy
+waila.scanner.owner=Owner
