--- a/src/main/resources/assets/scanner/lang/zh_cn.lang
+++ b/src/main/resources/assets/scanner/lang/zh_cn.lang
@@ -3,31 +3,36 @@ tile.biomeScannerBasic.name=生物群系扫描仪（基础）
 tile.biomeScannerAdv.name=生物群系扫描仪（高级）
 tile.biomeScannerElite.name=生物群系扫描仪（精英）
 tile.biomeScannerUltimate.name=生物群系扫描仪（终极）
-itemGroup.scanner=扫描器
 tile.scannerQueue.name=扫描队列
-gui.showMap=显示地图
-gui.charged=充能
-gui.turnOn=开启
-gui.turnOff=关闭
-gui.enderIOWarningL1=(警告: 可能会与EnderIO
-gui.enderIOWarningL2=管道和电容产生兼容问题)
-gui.current=当前方块:
-gui.currentBlockOff=当前方块: 关闭
-gui.endBlock=终止方块:
-gui.remoteStart=远程起点:
-gui.ultimateBSL1=将终极生物群系扫描仪
-gui.ultimateBSL2=置于相邻位置来显示地图
-gui.queueAttached=扫描队列已连接
-gui.tsAttached=地形扫描仪已连接
-gui.tsNotAttached=地形扫描仪未连接
-gui.clickToScan=点击开始扫描！
-gui.powerCost=消耗能量:
-gui.alreadyBuilding=已在建造!
-gui.insufficientPower=能量不足!
-gui.cannotScanChunks=无法扫描 %d 个区块以外的区块！
-gui.button.add=新增
-gui.button.build=建造
-gui.button.remove=移除
-capacity=容量
-distanceInChunks=区块距离
-speedInBlocksPerTick=速度 (方块/t)
+
+gui.scanner.showMap=显示地图
+gui.scanner.charged=充能
+gui.scanner.turnOn=开启
+gui.scanner.turnOff=关闭
+gui.scanner.enderIOWarningL1=(警告: 可能会与EnderIO
+gui.scanner.enderIOWarningL2=管道和电容产生兼容问题)
+gui.scanner.current=当前方块:
+gui.scanner.currentBlockOff=当前方块: 关闭
+gui.scanner.endBlock=终止方块:
+gui.scanner.remoteStart=远程起点:
+gui.scanner.ultimateBSL1=将终极生物群系扫描仪
+gui.scanner.ultimateBSL2=置于相邻位置来显示地图
+gui.scanner.queueAttached=扫描队列已连接
+gui.scanner.tsAttached=地形扫描仪已连接
+gui.scanner.tsNotAttached=地形扫描仪未连接
+gui.scanner.clickToScan=点击开始扫描！
+gui.scanner.powerCost=消耗能量:
+gui.scanner.alreadyBuilding=已在建造!
+gui.scanner.insufficientPower=能量不足!
+gui.scanner.cannotScanChunks=无法扫描 %d 个区块以外的区块！
+gui.scanner.button.add=新增
+gui.scanner.button.build=建造
+gui.scanner.button.remove=移除
+gui.scanner.capacity=容量
+gui.scanner.distanceInChunks=区块距离
+gui.scanner.speedInBlocksPerTick=速度 (方块/t)
+
+itemGroup.scanner=扫描器
+
+waila.scanner.energy=能量
+waila.scanner.owner=拥有者
